<resources>
    <string name="app_name">Meem</string>
    <string name="title_activity_drazer_activity">Drazer_activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_logut">Log out</string>
    <string name="menu_user">User Account Setting</string>
    <string name="menu_aboutus">About us</string>
    <string name="menu_services">Services</string>
    <string name="menu_fqa">FQA</string>
    <string name="menu_contacts">Contact us</string>
    <string name="menu_registration">Registration</string>
    <string name="title_activity_drawer">DrawerActivity</string>



    <!-- activity_login.xml -->
    <string name="et_login_phone_hint">Mobile Number (Required)</string>
    <string name="tv_login_email">Email / Mobile No. (Required)</string>
    <string name="tv_loginemail">Email</string>
    <string name="tv_login_password">Password (Required)</string>
    <string name="btn_login">Login</string>
    <string name="btn_send">Send</string>
    <string name="tv_login_note">Before continue with application you must verify your mobile number. Our system will sent you OTP code on registered mobile number</string>


</resources>
