<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_aboutus"
            android:icon="@drawable/aboutus"
            android:title="@string/menu_aboutus" />
        <item
            android:id="@+id/nav_fqa"
            android:icon="@drawable/faq"
            android:title="@string/menu_fqa" />
        <item
            android:id="@+id/nav_contacts"
            android:icon="@drawable/ic_contacts_black_24dp"
            android:title="@string/menu_contacts" />
        <item
            android:id="@+id/nav_regitration"
            android:icon="@drawable/registration"
            android:title="@string/menu_registration" />
        <item
             android:id="@+id/nav_user"
             android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/menu_user" />
        <item
            android:id="@+id/nav_logoutnn"
            android:icon="@drawable/logout"
            android:title="@string/menu_logut" />
    </group>


</menu>
